<resources>
    <string name="app_name">Rocket</string>

    <string name="title_options">Options</string>
    <string name="title_tutorial">Tutorial</string>
    <string name="title_achievements">Achievements</string>
    <string name="title_progress">Progress</string>
    <string name="title_leaderboard">Leaderboard</string>
    <string name="title_help">Help</string>
    <string name="title_ded">You died :(</string>
    <string name="title_difficulty">Difficulty</string>

    <string name="action_start">Press to Start</string>
    <string name="action_continue">Press OK to continue.</string>
    <string name="action_ok">OK</string>
    <string name="action_settings">Settings</string>

    <string name="high_score">New high score, %1$d!</string>
    <string name="normal_score">Your high score is %1$d.</string>

    <string name="total_attempts">Attempts: %1$d</string>
    <string name="total_high_score">High Score: %1$d</string>
    <string name="total_skill">Skill Ratio: %1$d</string>

    <string name="value_low">Low</string>
    <string name="value_high">High</string>

    <string name="lost_connection">Lost Connection :(</string>

    <string name="sign_in_failure">Sign-in failed</string>
    <string name="mode_extreme">Extreme Mode</string>
    <string name="mode_extreme_desc">Very nearly impossible to master. Those that can handle this level must have ninja reaction times.</string>
    <string name="mode_extreme_multiplier">5x score multiplier</string>
    <string name="mode_hard">Hard Mode</string>
    <string name="mode_hard_desc">Hard to beat. It takes a while to get here. At least it is still possible…</string>
    <string name="mode_hard_multiplier">3x score multiplier</string>
    <string name="mode_medium">Medium Mode</string>
    <string name="mode_medium_desc">A little harder of a level. Still possible to beat though. Unless you happen to be biking along a road filled with potholes.</string>
    <string name="mode_medium_multiplier">2x score multiplier</string>
    <string name="mode_easy">Easy Mode</string>
    <string name="mode_easy_desc">A walk in the park compared to all the other levels. Rack up points and experience before moving on to a higher level.</string>
    <string name="mode_easy_multiplier">1x score multiplier</string>
    <string name="mode_winter">Winter Mode</string>
    <string name="mode_winter_desc">What\'s this!? A… hidden level? No way! And it\'s only unlocked during december, too!</string>
    <string name="play">Play</string>

    <string-array name="credits">
        <item>Brice Seibert - designed the easy mode and… something secret ;)</item>
        <item>Vukašin Anđelković - designed the extreme mode and the app icon</item>
        <item>Radek Bledowski - designed the medium mode</item>
        <item>Corbin Crutchley - did… more secret things :)</item>
        <item>Anas Khan - inspiration for the rocket</item>
        <item>Justin Kruit - inspired the color scheme</item>
    </string-array>
</resources>
