<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.james.rocket.views.RatioImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/bg"
        android:scaleType="centerCrop"
        android:id="@+id/image" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:paddingTop="128dp"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:clipToPadding="false">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/difficulty"
                    android:id="@+id/title"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="24sp"
                    android:layout_marginTop="24dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_high_score"
                    android:textColor="?android:textColorSecondary"
                    android:textSize="14sp"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/hiscore"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="100sp"
                        android:layout_gravity="start" />

                    <com.james.rocket.views.SquareImageView
                        android:layout_width="96dp"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/rocket"
                        android:rotation="-30"
                        android:scaleType="fitCenter"
                        android:id="@+id/rocket"
                        android:layout_gravity="end"
                        android:tint="?android:textColorPrimary"
                        android:tintMode="src_in" />

                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_attempts"
                    android:id="@+id/attempts"
                    android:textColor="?android:textColorSecondary"
                    android:textSize="14sp"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_skill"
                    android:textColor="?android:textColorSecondary"
                    android:textSize="14sp"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:layout_marginBottom="24dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/value_low"
                        android:layout_weight="1"
                        android:gravity="center_vertical|start"
                        android:textColor="?android:textColorSecondary"
                        android:textSize="14sp" />

                    <ProgressBar
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/progressBar"
                        android:layout_gravity="center_vertical"
                        android:layout_weight=".5" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/value_high"
                        android:layout_weight="1"
                        android:gravity="center_vertical|end"
                        android:textColor="?android:textColorSecondary"
                        android:textSize="14sp" />
                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </ScrollView>

</FrameLayout>