<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="16dp"
        android:orientation="horizontal">

        <com.google.android.gms.common.SignInButton
            android:id="@+id/signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

        <FrameLayout
            android:id="@+id/progress"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_gravity="top"
                android:layout_margin="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:tint="?android:textColorPrimaryInverse"
                app:srcCompat="@drawable/ic_progress" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:text="@string/title_progress"
                android:textColor="?android:textColorPrimaryInverse"
                android:textSize="14sp" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/achv"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"
            android:visibility="gone">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_gravity="top"
                android:layout_margin="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:tint="?android:textColorPrimaryInverse"
                app:srcCompat="@drawable/ic_stars" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:text="@string/title_achievements"
                android:textColor="?android:textColorPrimaryInverse"
                android:textSize="14sp" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/scoreboard"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"
            android:visibility="gone">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_gravity="top"
                android:layout_margin="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:tint="?android:textColorPrimaryInverse"
                app:srcCompat="@drawable/ic_leaderboard" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:text="@string/title_leaderboard"
                android:textColor="?android:textColorPrimaryInverse"
                android:textSize="14sp" />
        </FrameLayout>

    </LinearLayout>

    <com.james.rocket.views.SquareImageView
        android:id="@+id/settings"
        android:layout_width="?attr/actionBarSize"
        android:layout_height="?attr/actionBarSize"
        android:scaleType="centerInside"
        android:tint="@android:color/white"
        android:background="?attr/selectableItemBackground"
        android:layout_gravity="top|end"
        app:srcCompat="@drawable/ic_settings" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center"
        app:backgroundTint="?android:textColorTertiary"
        app:elevation="0dp"
        app:srcCompat="@drawable/ic_play" />

</android.support.design.widget.CoordinatorLayout>